# chat_platform

./: .gitignore
es/: main
example/: discovery  discovery.cc  makefile  registry  registry.cc
example/brpc/: main.proto  makefile
example/etcd/: get  put.cc
example/redis++/: main  makefile
example/spdlog/: async  sync
header/: channel.hpp  dms.hpp  elastic.hpp  etcd.hpp  logger.hpp
server/: CMakeLists.txt  depends.sh  docker-compose.yml  entrypoint.sh
server/common/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
server/conf/: file_server.conf  friend_server.conf  gateway_server.conf  message_server.conf  speech_server.conf  transmite_server.conf  user_server.conf
server/example/odb/test2/: CMakeLists.txt  student.hxx
server/example/odb/test2/entity/: student.hxx
server/example/odb/test2/source/: main.cc
server/file/: CMakeLists.txt  dockerfile
server/friend/: dockerfile
server/gateway/: CMakeLists.txt  dockerfile
server/header/: asr.hpp  channel.hpp  data_es.hpp  data_redis.hpp  dms.hpp  elastic.hpp  logger.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
server/message/: CMakeLists.txt  dockerfile
server/odb/: chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx  user.hxx
server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
test/es/: main  (+1 more)
(+304 files in other folders)
